--- a/SALESWEB/Views/Home/About.cshtml
+++ b/SALESWEB/Views/Home/About.cshtml
@@ -2,6 +2,9 @@
     ViewData["Title"] = "About";
 }
 <h2>@ViewData["Title"]</h2>
-<h3>@ViewData["Message"]</h3>
+<h2>@ViewData["Message"]</h2>
 
-<p>Use this area to provide additional information.</p>
+<p>Use this area to provide additional information.</p> 
+<p>@ViewData["email"]</p>
+<p>@ViewData["email"]</p>
+
